--- a/CoreDemo/Views/Blog/BlogReadAll.cshtml
+++ b/CoreDemo/Views/Blog/BlogReadAll.cshtml
@@ -32,7 +32,7 @@
 										</a>
 									</li>
 									<li class="mx-2">
-										<a href="#">
+										<a href="#"> 
 											<i class="far fa-thumbs-up"></i> 0 Likes
 										</a>
 									</li>
@@ -56,7 +56,7 @@
 					</div>
 					}
 
-				@await Component.InvokeAsync("CommentsList")
+				@await Component.InvokeAsync("CommentListByBlog" , new{ id= ViewBag.i})
 				@*@await Html.PartialAsync("~/Views/Comment/CommentListByBlog.cshtml")*@
 				@await Html.PartialAsync("~/Views/Comment/PartialAddComment.cshtml")
 
@@ -79,64 +79,11 @@
 							</form>
 
 						</div>
-						<div class="tech-btm">
-							<h4>Categories</h4>
-							<ul class="list-group single">
-								<li class="list-group-item d-flex justify-content-between align-items-center">
-									Cras justo odio
-									<span class="badge badge-primary badge-pill">14</span>
-								</li>
-								<li class="list-group-item d-flex justify-content-between align-items-center">
-									Dapibus ac facilisis in
-									<span class="badge badge-primary badge-pill">2</span>
-								</li>
-								<li class="list-group-item d-flex justify-content-between align-items-center">
-									Morbi leo risus
-									<span class="badge badge-primary badge-pill">1</span>
-								</li>
-							</ul>
-						</div>
-						<div class="tech-btm">
-							<h4>Top stories of the week</h4>
 
-							<div class="blog-grids row mb-3">
-								<div class="col-md-5 blog-grid-left">
-									<a href="single.html">
-										<img src="images/1.jpg" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="col-md-7 blog-grid-right">
+					@await Component.InvokeAsync("CategoryList")
 
-									<h5>
-										<a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-									</h5>
-									<div class="sub-meta">
-										<span>
-											<i class="far fa-clock"></i> 20 Jan, 2018
-										</span>
-									</div>
-								</div>
-
-							</div>
-							<div class="blog-grids row mb-3">
-								<div class="col-md-5 blog-grid-left">
-									<a href="single.html">
-										<img src="images/6.jpg" class="img-fluid" alt="">
-									</a>
-								</div>
-								<div class="col-md-7 blog-grid-right">
-									<h5>
-										<a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-									</h5>
-									<div class="sub-meta">
-										<span>
-											<i class="far fa-clock"></i> 20 Feb, 2018
-										</span>
-									</div>
-								</div>
-
-							</div>
-						</div>
+					@await Component.InvokeAsync("WriterLastBlog")
+						
 						<div class="single-gd my-5 tech-btm">
 							<h4>Our Progress</h4>
 							<div class="progress">
@@ -161,11 +108,11 @@
 							</div>
 						</div>
 						<div class="single-gd tech-btm">
-							<h4>Recent Post</h4>
+							<h4>Son Eklenen Post</h4>
 							<div class="blog-grids">
 								<div class="blog-grid-left">
 									<a href="single.html">
-										<img src="images/b1.jpg" class="img-fluid" alt="">
+									<img src="~/CoreBlogTema/web/images/b1.jpg" class="img-fluid" alt="">
 									</a>
 								</div>
 								<div class="blog-grid-right">
